[gd_scene load_steps=43 format=3 uid="uid://wgb1b26ie4w5"]

[ext_resource type="Script" path="res://test/LevelTest/basic_level.gd" id="1_fnjwn"]
[ext_resource type="PackedScene" uid="uid://cq1r758b0q8ui" path="res://test/entery_point.tscn" id="2_2oxsu"]
[ext_resource type="Script" path="res://Unit/Camera/view.gd" id="3_5ao1d"]
[ext_resource type="Script" path="res://Unit/Camera/camera_3d.gd" id="4_jwelj"]
[ext_resource type="Script" path="res://Unit/Camera/truma_component.gd" id="5_yo50f"]
[ext_resource type="FastNoiseLite" uid="uid://cf8kmjxfov4l1" path="res://test/level/noise.tres" id="6_dqxve"]
[ext_resource type="Shader" path="res://move/ground_checkerboard.gdshader" id="7_ee7h1"]
[ext_resource type="Texture2D" uid="uid://b2jq6w3oviv25" path="res://move/checkerboard.svg" id="8_xf12e"]
[ext_resource type="Environment" uid="uid://d05prbjccscu6" path="res://move/envi01.tres" id="9_alc6s"]
[ext_resource type="PackedScene" uid="uid://so8eg7q6g3dn" path="res://Unit/Enemy/rigid_enemy.tscn" id="10_ebrsn"]
[ext_resource type="PackedScene" uid="uid://bn7xwvst3to0c" path="res://Unit/PhysicalObject/turkey.tscn" id="11_ctvvs"]
[ext_resource type="PackedScene" uid="uid://b3fibmjnlqia7" path="res://test/enemy/pizza.tscn" id="12_vdv0t"]
[ext_resource type="PackedScene" uid="uid://dornphy2q7xsd" path="res://Unit/Enemy/baisc_enemy_spwaner.tscn" id="13_56d2j"]
[ext_resource type="PackedScene" uid="uid://di0n76sqbueep" path="res://test/target/target_enemy_spwaner.tscn" id="14_dofet"]
[ext_resource type="PackedScene" uid="uid://c3ndpg12bjjp3" path="res://test/target/target_enemy.tscn" id="15_n8ajf"]
[ext_resource type="PackedScene" uid="uid://bo33wyc3v2qxj" path="res://test/moving_platform.tscn" id="16_1i6rv"]
[ext_resource type="PackedScene" uid="uid://dvumw4an5h14" path="res://Unit/DropItem/drop_rigid_item.tscn" id="17_vn4o7"]
[ext_resource type="Shader" uid="uid://bhmoyftdlndgg" path="res://test/Shader/distance_shader_test.tres" id="18_dygxm"]
[ext_resource type="Texture2D" uid="uid://bka2cg1mexkjb" path="res://test/Shader/pattern_01.svg" id="19_qm5n7"]
[ext_resource type="PackedScene" uid="uid://ercle1g605m2" path="res://Unit/Payload/move_payload.tscn" id="20_0ufhv"]
[ext_resource type="PackedScene" uid="uid://cys28ci6xn58s" path="res://test/target/occupy_zone.tscn" id="21_nrsvd"]
[ext_resource type="Script" path="res://test/test_manager.gd" id="22_wtsrp"]
[ext_resource type="Script" path="res://test/level_target_test.gd" id="23_cuwl0"]
[ext_resource type="PackedScene" uid="uid://b6vk7xc8fcwcd" path="res://test/target/payload_progress_ui.tscn" id="24_dgxbv"]
[ext_resource type="Script" path="res://UI/buff_indiactor_test.gd" id="25_d005f"]
[ext_resource type="PackedScene" uid="uid://be1ruxyjak0wo" path="res://UI/buff_icon.tscn" id="26_0aamg"]
[ext_resource type="Script" path="res://test/loot_number.gd" id="27_56qht"]
[ext_resource type="Script" path="res://UI/firerate.gd" id="28_5u48v"]
[ext_resource type="PackedScene" uid="uid://bwsn1pbi3p8a1" path="res://Unit/spwaner/follow_payload_chest_spwaner.tscn" id="29_gwc2c"]
[ext_resource type="PackedScene" uid="uid://broucx21daax8" path="res://Unit/DropItem/chest.tscn" id="30_1uns8"]
[ext_resource type="PackedScene" uid="uid://csb3rp0raacor" path="res://Unit/Enemy/StateEnemy/enemy_state_test02.tscn" id="31_u7hcl"]
[ext_resource type="PackedScene" uid="uid://c0183kou80eg8" path="res://Unit/Facility/dialog_test_ground_button.tscn" id="32_3g0vm"]
[ext_resource type="PackedScene" uid="uid://cfd4tnawju0ay" path="res://Unit/Facility/buff_test_ground_button.tscn" id="33_toiyo"]
[ext_resource type="PackedScene" uid="uid://d33dl742ix1a6" path="res://Unit/Facility/loot_test_ground_button.tscn" id="34_mlr3e"]
[ext_resource type="PackedScene" uid="uid://bf2tuy0g8hnxr" path="res://Unit/Enemy/follow_enemy_spwaner_02.tscn" id="35_bkhkh"]
[ext_resource type="PackedScene" uid="uid://dknht2bov7s7k" path="res://test/player/Basic Player.tscn" id="36_yttye"]
[ext_resource type="PackedScene" uid="uid://c3iha1stqvr32" path="res://Unit/Enemy/StateEnemy/enemy_state_test_03.tscn" id="37_4361j"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3nqov"]
render_priority = 0
shader = ExtResource("7_ee7h1")
shader_parameter/albedo_color = Color(0.2, 0.2, 0.2, 1)
shader_parameter/uv_scale = 40.0
shader_parameter/checkerboard_sampler = ExtResource("8_xf12e")

[sub_resource type="PlaneMesh" id="PlaneMesh_weu8b"]
size = Vector2(80, 80)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_54rqv"]
data = PackedVector3Array(40, 0, 40, -40, 0, 40, 40, 0, -40, -40, 0, 40, -40, 0, -40, 40, 0, -40)

[sub_resource type="Curve3D" id="Curve3D_5k2fc"]
_data = {
"points": PackedVector3Array(-12.3535, -4.24683e-05, 9.74472, 12, 0, -12, -16, -0.423, -16, -5.31032, 4.24683e-05, -5.86281, 5.31032, -4.24683e-05, 5.86281, 16, -0.423, -16, 5.78316, 4.24683e-05, -7.39783, -5.78316, -4.24683e-05, 7.39783, 16, -0.423, 26, 5.70875, 4.24683e-05, 7.13314, -5.70875, -4.24683e-05, -7.13314, -16, -0.423, 26, -5.97928, 4.24683e-05, 5.81132, 5.97928, -4.24683e-05, -5.81132, -16, -0.423, -16),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0)
}
point_count = 5

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4rlnw"]
render_priority = 0
shader = ExtResource("18_dygxm")
shader_parameter/ColorParameter = Color(1, 0.827451, 0.388235, 1)
shader_parameter/Vector2Parameter = Vector2(-0.5, 0)
shader_parameter/FloatParameter = 0.05
shader_parameter/main_texture = ExtResource("19_qm5n7")

[node name="PrototypeTest" type="Node3D"]
script = ExtResource("1_fnjwn")

[node name="EnteryPoint" parent="." instance=ExtResource("2_2oxsu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8.49353, 0.594098, -13.4946)

[node name="View" type="Node3D" parent="." node_paths=PackedStringArray("target")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.10846, 1.48326, 1.26512)
script = ExtResource("3_5ao1d")
target = NodePath("../Basic Player")

[node name="Camera3D" type="Camera3D" parent="View"]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, -4.5292, 8.51674, 3.69911)
projection = 1
size = 12.0
far = 40.0
script = ExtResource("4_jwelj")

[node name="truma_component" type="Node" parent="View/Camera3D"]
script = ExtResource("5_yo50f")
max_x = 2.0
max_y = 2.0
max_z = 2.0
max_trauma = 0.4
noise = ExtResource("6_dqxve")

[node name="World" type="Node3D" parent="."]

[node name="Sun" type="DirectionalLight3D" parent="World"]
transform = Transform3D(0.91212, 0.355004, -0.204961, 0, 0.5, 0.866025, 0.409923, -0.789919, 0.45606, -23.5194, 9.37435, -3.25129)
shadow_enabled = true
shadow_opacity = 0.75

[node name="MeshInstance3D" type="MeshInstance3D" parent="World"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.524397, 0)
material_override = SubResource("ShaderMaterial_3nqov")
mesh = SubResource("PlaneMesh_weu8b")
metadata/_edit_lock_ = true

[node name="StaticBody3D" type="StaticBody3D" parent="World/MeshInstance3D"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="World/MeshInstance3D/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_54rqv")

[node name="Environment" type="WorldEnvironment" parent="World"]
environment = ExtResource("9_alc6s")

[node name="RigidEnemyTest" type="Node3D" parent="."]

[node name="RigidEnemy" parent="RigidEnemyTest" instance=ExtResource("10_ebrsn")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12.8457, 1.25117, 3.2674)

[node name="Turkey" parent="RigidEnemyTest" instance=ExtResource("11_ctvvs")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.28586, 0.988752, 3.435)

[node name="Pizza" parent="RigidEnemyTest" instance=ExtResource("12_vdv0t")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.11019, 0.832638, 6.84001)

[node name="BaiscEnemySpwaner" parent="RigidEnemyTest" instance=ExtResource("13_56d2j")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 27.8948, 2.03919, -4.84904)

[node name="TargetEnemySpwanerTest" type="Node3D" parent="."]

[node name="TargetEnemySpwaner" parent="TargetEnemySpwanerTest" instance=ExtResource("14_dofet")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.86424, 0.630728, 5.00555)

[node name="Target_Enemy" parent="TargetEnemySpwanerTest" instance=ExtResource("15_n8ajf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.63193, 0.630728, 4.98824)

[node name="PathTest" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.42334, 0)

[node name="MovingPlatform" parent="PathTest" instance=ExtResource("16_1i6rv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.744117, 0.987252, -3.05875)

[node name="DropRigidItem" parent="PathTest/MovingPlatform" instance=ExtResource("17_vn4o7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8.39317, 0.456356, 5.90125)

[node name="Path3D" type="Path3D" parent="PathTest"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.720931, 0)
curve = SubResource("Curve3D_5k2fc")

[node name="CSGPolygon3D" type="CSGPolygon3D" parent="PathTest/Path3D"]
material_override = SubResource("ShaderMaterial_4rlnw")
polygon = PackedVector2Array(-0.1, -0.005, -0.1, 0.005, 0.1, 0.005, 0.1, -0.005)
mode = 2
path_node = NodePath("..")
path_interval_type = 0
path_interval = 1.0
path_simplify_angle = 0.0
path_rotation = 2
path_local = true
path_continuous_u = true
path_u_distance = 0.69
path_joined = false

[node name="MovePayload" parent="PathTest/Path3D" instance=ExtResource("20_0ufhv")]
progress = 1.0

[node name="OccupyZoneTest" type="Node3D" parent="."]

[node name="OccupyZone" parent="OccupyZoneTest" instance=ExtResource("21_nrsvd")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.999659, 0.564809, 0.494062)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TestManager" type="Control" parent="CanvasLayer"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("22_wtsrp")

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/TestManager"]
layout_mode = 1
offset_right = 330.0
offset_bottom = 468.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/TestManager/HBoxContainer"]
layout_mode = 2

[node name="CleanPlayerWeapon" type="Button" parent="CanvasLayer/TestManager/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "清除玩家武器
"

[node name="SMG" type="Button" parent="CanvasLayer/TestManager/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "SMG"

[node name="Shotgun" type="Button" parent="CanvasLayer/TestManager/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Shotgun
"

[node name="Reolver" type="Button" parent="CanvasLayer/TestManager/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Reolver
"

[node name="Slugger" type="Button" parent="CanvasLayer/TestManager/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Slugger"

[node name="BombShooter" type="Button" parent="CanvasLayer/TestManager/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "BombShooter
"

[node name="VBoxContainer3" type="VBoxContainer" parent="CanvasLayer/TestManager/HBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="CanvasLayer/TestManager/HBoxContainer/VBoxContainer3"]
layout_mode = 2
text = "关卡开始"

[node name="Button2" type="Button" parent="CanvasLayer/TestManager/HBoxContainer/VBoxContainer3"]
layout_mode = 2
text = "加载关卡 1
"

[node name="add loot" type="Button" parent="CanvasLayer/TestManager/HBoxContainer/VBoxContainer3"]
layout_mode = 2
text = "添加战利品
"

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer/TestManager/HBoxContainer"]
layout_mode = 2

[node name="add1xenemy" type="Button" parent="CanvasLayer/TestManager/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "add  1x enemy
"

[node name="LevelTimer" type="PanelContainer" parent="CanvasLayer"]
offset_left = 912.0
offset_top = 816.0
offset_right = 1036.0
offset_bottom = 849.0

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/LevelTimer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Label" type="Label" parent="CanvasLayer/LevelTimer/MarginContainer"]
layout_mode = 2
text = "TimeLeft 00:00"
horizontal_alignment = 1

[node name="LevelTargetTest" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0
script = ExtResource("23_cuwl0")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/LevelTargetTest"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -218.0
offset_bottom = 101.0
grow_horizontal = 0

[node name="Payload" type="PanelContainer" parent="CanvasLayer/LevelTargetTest/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/LevelTargetTest/VBoxContainer/Payload"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/LevelTargetTest/VBoxContainer/Payload/HBoxContainer"]
layout_mode = 2
text = "推车进度"

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer/LevelTargetTest/VBoxContainer/Payload/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="OccupyZone" type="PanelContainer" parent="CanvasLayer/LevelTargetTest/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/LevelTargetTest/VBoxContainer/OccupyZone"]
layout_mode = 2

[node name="LabelOccupyZone" type="Label" parent="CanvasLayer/LevelTargetTest/VBoxContainer/OccupyZone/HBoxContainer"]
layout_mode = 2
text = "占点进度"

[node name="ProgressBarOccupyZone" type="ProgressBar" parent="CanvasLayer/LevelTargetTest/VBoxContainer/OccupyZone/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
max_value = 1.0
step = 0.1

[node name="TargetEnemy" type="PanelContainer" parent="CanvasLayer/LevelTargetTest/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/LevelTargetTest/VBoxContainer/TargetEnemy"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/LevelTargetTest/VBoxContainer/TargetEnemy/HBoxContainer"]
layout_mode = 2
text = "目标进度"

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer/LevelTargetTest/VBoxContainer/TargetEnemy/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="PayloadProgressUI" parent="CanvasLayer" instance=ExtResource("24_dgxbv")]
offset_left = 696.0
offset_top = 824.0
offset_right = 696.0
offset_bottom = 824.0

[node name="BuffIndiactorTest" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
size_flags_horizontal = 0
mouse_filter = 2
script = ExtResource("25_d005f")
BuffIcon = ExtResource("26_0aamg")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/BuffIndiactorTest"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -144.0
offset_top = -148.0
offset_right = 458.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.5, 0.5)
theme_override_constants/margin_bottom = 40

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/BuffIndiactorTest/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="LootNumber" type="PanelContainer" parent="CanvasLayer"]
offset_left = 912.0
offset_top = 856.0
offset_right = 1036.0
offset_bottom = 889.0
script = ExtResource("27_56qht")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/LootNumber"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Label" type="Label" parent="CanvasLayer/LootNumber/MarginContainer"]
layout_mode = 2
text = "Loot : 0/0"
horizontal_alignment = 1

[node name="WeaponStatus" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0

[node name="HBoxContainer" type="VBoxContainer" parent="CanvasLayer/WeaponStatus"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -372.0
offset_top = -52.0
offset_right = -152.0
offset_bottom = -15.0
grow_vertical = 0

[node name="WeaponStatus" type="PanelContainer" parent="CanvasLayer/WeaponStatus/HBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/WeaponStatus/HBoxContainer/WeaponStatus"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Firerate" type="HBoxContainer" parent="CanvasLayer/WeaponStatus/HBoxContainer/WeaponStatus/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5
script = ExtResource("28_5u48v")

[node name="Label" type="Label" parent="CanvasLayer/WeaponStatus/HBoxContainer/WeaponStatus/MarginContainer/Firerate"]
layout_mode = 2
text = "main weapon"
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer/WeaponStatus/HBoxContainer/WeaponStatus/MarginContainer/Firerate"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
max_value = 1.0
value = 1.0

[node name="follow_payload_chest_spwaner" parent="." instance=ExtResource("29_gwc2c")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2)
Chest = ExtResource("30_1uns8")

[node name="EnemyStateTest02" parent="." instance=ExtResource("31_u7hcl")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.4835, 1.54611, -5.52192)

[node name="DialogTestGroundButton" parent="." instance=ExtResource("32_3g0vm")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.05232, 0.525106, 10.9371)

[node name="BuffTestGroundButton" parent="." instance=ExtResource("33_toiyo")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.33466, 0.525106, 9.49709)

[node name="LootTestGroundButton" parent="." instance=ExtResource("34_mlr3e")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.45205, 0.525106, 7.07111)

[node name="FollowEnemySpwaner02" parent="." instance=ExtResource("35_bkhkh")]

[node name="FollowEnemySpwaner03" parent="." instance=ExtResource("35_bkhkh")]

[node name="FollowEnemySpwaner04" parent="." instance=ExtResource("35_bkhkh")]

[node name="Basic Player" parent="." node_paths=PackedStringArray("Camera") instance=ExtResource("36_yttye")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -14.9236, 3.05559, -11.7724)
Camera = NodePath("../View/Camera3D")

[node name="EnemyStateTest03" parent="." instance=ExtResource("37_4361j")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -20.2844, 1.95902, -8.32331)

[connection signal="pressed" from="CanvasLayer/TestManager/HBoxContainer/VBoxContainer/CleanPlayerWeapon" to="CanvasLayer/TestManager" method="_on_clean_player_weapon_pressed"]
[connection signal="pressed" from="CanvasLayer/TestManager/HBoxContainer/VBoxContainer/SMG" to="CanvasLayer/TestManager" method="_on_smg_pressed"]
[connection signal="pressed" from="CanvasLayer/TestManager/HBoxContainer/VBoxContainer/Shotgun" to="CanvasLayer/TestManager" method="_on_shotgun_pressed"]
[connection signal="pressed" from="CanvasLayer/TestManager/HBoxContainer/VBoxContainer/Reolver" to="CanvasLayer/TestManager" method="_on_reolver_pressed"]
[connection signal="pressed" from="CanvasLayer/TestManager/HBoxContainer/VBoxContainer/Slugger" to="CanvasLayer/TestManager" method="_on_slugger_pressed"]
[connection signal="pressed" from="CanvasLayer/TestManager/HBoxContainer/VBoxContainer/BombShooter" to="CanvasLayer/TestManager" method="_on_bomb_shooter_pressed"]
[connection signal="pressed" from="CanvasLayer/TestManager/HBoxContainer/VBoxContainer3/add loot" to="CanvasLayer/TestManager" method="_on_add_loot_pressed"]
[connection signal="pressed" from="CanvasLayer/TestManager/HBoxContainer/VBoxContainer2/add1xenemy" to="CanvasLayer/TestManager" method="_on_add_1_xenemy_pressed"]
